# RPIPicoW-SDCard-Exp

./: .gitmodules  README.md
exp/rtc-sensor2SD/: CMakeLists.txt
exp/rtc-sensor2SD/port/FreeRTOS-Kernel/: freertos_config.cmake
exp/rtc-sensor2SD/src/: CMakeLists.txt  WifiHelper.cpp  WifiHelper.h  main.cpp  my_fs_init.c
exp/sd-only/src/: CMakeLists.txt  main.c
exp/sensor2SD/: CMakeLists.txt  pico_vfs.cmake
exp/sensor2SD/src/: main.c
